# python-playground

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml
docker-config/: docker-compose.yml
scripts/: run_local.sh  test_service.sh
src/: main.py
src/api/: config.py  initializer.py  methods.py  models.py
src/lessons/: lesson_one.py
src/service/: lesson_interface.py  lesson_selector.py
src/service/lessons/: lesson_one.py  lesson_two.py
tests/unit_tests/lessons/: test_lesson_one.py
tests/unit_tests/service/: test_lesson_selector.py
tests/unit_tests/service/lessons/: test_lesson_one.py  test_lesson_two.py
tests/unit_tests/service/lessons/test_files/: winequality-white.csv
