[tool.poetry]
name = "python-playground"
version = "0.0.1"
description = "fun with python"
authors = ["Gustaw Fit <gustaw.fit@gmail.com>"]
packages = [
    { include = "src" },
    { include = "src/*/*" },]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.1"

[tool.black]
line-length = 130
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.virtualenvs
)/
'''

[tool.pytest.ini_options]
markers = [
    "unittest: Unit tests",
]

[tool.poetry.scripts]
run_local = "src.main:run"