[tool.poetry]
name = "python-playground"
version = "0.0.1"
description = "fun with python"
authors = ["Gustaw Fit <gustaw.fit@gmail.com>"]
packages = [
    { include = "src" },
    { include = "src/*/*" },]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
structlog = "^20.2.0"
python-json-logger = "^2.0.1"
httpx = "^0.16.1"
pytest-asyncio = "^0.14.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.1"

[tool.black]
line-length = 130
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.virtualenvs
)/
'''

[tool.pytest.ini_options]
markers = [
    "unittest: Unit tests",
]

[tool.poetry.scripts]
start_app = "src.main:start_app"